fix dark mode issues

--- a/src/styles/GlobalStyles.css
+++ b/src/styles/GlobalStyles.css
@@ -5,21 +5,6 @@
   margin: 0;
   padding: 0;
 }
-/* :root {
-
-} */
-/* :root {
-  --primaryPurple: #3a98b9;
-  --black-1: #646681;
-  --black-2: #585858;
-  --bg-1: #eff5f5;
-  --bg-2: #d6e4e5;
-  --bg-3: #838a8a;
-  --gray-1: #eee;
-  --gray-2: #dedfe1;
-  --black: black;
-  --white: white;
-} */
 body[data-dark-mode="false"] {
   --primaryPurple: #4285f4;
   --black-1: #3b3b3b;
